<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        android:layout_marginVertical="13dp"
        android:layout_marginHorizontal="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans"
        />

    <EditText
        android:id="@+id/member_name_edittext"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:fontFamily="@font/open_sans"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans"
        />

    <EditText
        android:id="@+id/member_age_edittext"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:fontFamily="@font/open_sans"
        />

    <RadioGroup
        android:id="@+id/member_sex_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/open_sans"
            />

        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_female"
            android:fontFamily="@font/open_sans"
            />
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_male"
            android:fontFamily="@font/open_sans"
            />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allergies"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans"
        />

    <EditText
        android:id="@+id/allergies_textview"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>