<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoFormFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    >

    <TextView
        android:id="@+id/welcome_info_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/welcome_info"
        android:textSize="24sp"
        android:textColor="@color/orange_700"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        />


    <LinearLayout
        android:id="@+id/family_members_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_member_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:src="@drawable/ic_add"
        android:text="@string/plus"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/add"
        android:layout_marginBottom="15dp"
        />


</LinearLayout>
</ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_chevron_right"
        android:contentDescription="@string/next" />
</androidx.constraintlayout.widget.ConstraintLayout>