<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/hi_user"
            android:fontFamily="@font/open_sans"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nutrition_intro"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/plan_trip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plan_trip"
            android:textAllCaps="false"
            android:paddingVertical="15dp"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>
</ScrollView>