<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPlanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        >

        <TextView
            android:id="@+id/start_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/start_plan_header"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/orange_700"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans"
            />

        <EditText
            android:id="@+id/budget_edittext"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:fontFamily="@font/open_sans"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_meals"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans"
            />

        <EditText
            android:id="@+id/num_meals_edittext"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:fontFamily="@font/open_sans"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/members"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans"
            />

        <LinearLayout
            android:id="@+id/member_checkbox_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />

</LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_chevron_right"
        android:contentDescription="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>
