<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodChoiceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/recommendation_info_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_marginHorizontal="30dp"
                android:text="@string/recommendation_intro"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/orange_700"
                android:layout_marginTop="40dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@color/orange_500"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/select_1"
                android:fontFamily="@font/open_sans"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_marginHorizontal="30dp"
                android:text="@string/fruit"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />

            <include
                android:id="@+id/banana"
                layout="@layout/food_item_card"
                />

            <include
                android:id="@+id/pineapple"
                layout="@layout/food_item_card"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_marginHorizontal="30dp"
                android:text="@string/vegetable"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />

            <include
                android:id="@+id/carrot"
                layout="@layout/food_item_card"
                />

            <include
                android:id="@+id/tomato"
                layout="@layout/food_item_card"
                />

            <include
                android:id="@+id/cabbage"
                layout="@layout/food_item_card"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_marginHorizontal="30dp"
                android:text="@string/protein"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />

            <include
                android:id="@+id/eggs"
                layout="@layout/food_item_card"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="80dp"
                />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_chevron_right"
        android:contentDescription="@string/next" />


</androidx.constraintlayout.widget.ConstraintLayout>