<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionalValueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        >

        <TextView
            android:id="@+id/trip_summary_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginHorizontal="30dp"
            android:text="@string/trip_summary"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/orange_700"
            android:layout_marginTop="40dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@color/orange_500"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginHorizontal="30dp"
            android:text="@string/nutrient_summary"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginHorizontal="30dp"
            android:text="Calories per meal:\n26 kcal\n\nMacronutrients:\n52% Carbohydrates, 18% Protein, 30% Fat\n\nMicronutrients:\nVitamin A, Vitamin C, Calcium, and Iron, among others."
            android:textSize="20sp"
            android:textColor="@color/black"

            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginHorizontal="30dp"
            android:text="@string/estimated_price"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginHorizontal="30dp"
            android:text="৳ 298"
            android:textSize="20sp"
            android:textColor="@color/black"

            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:layout_marginHorizontal="30dp"
            android:text="@string/selected_food"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <include
            android:id="@+id/banana"
            layout="@layout/food_item_card"
            />

        <include
            android:id="@+id/carrot"
            layout="@layout/food_item_card"
            />

        <include
            android:id="@+id/eggs"
            layout="@layout/food_item_card"
            />


    </LinearLayout>

</ScrollView>